--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
     <title>Power GIF</title>
   </head>
   <body>
+    <a href="https://github.com/smith/powergif"
+      ><img
+        style="position: absolute; top: 0; right: 0; border: 0;"
+        src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"
+        alt="Fork me on GitHub"
+    /></a>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
     <!--
